# opsyclient

./: .gitignore  README.md  pylintrc  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.circleci/: config.yml
opsyclient/: __init__.py  client.py  shell.py  utils.py
tests/client/: test_opsyclient.py  test_utils.py
tests/data/: login_failed.json  login_success.json  swagger.json
