[metadata]
name = OpsyClient
summary = Client SDK/CLI for Opsy
author = Opsy
description-file =
    README.md
home-page = https://github.com/testeddoughnut/opsy
requires-python = >=3.6.0
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    opsyclient

[extras]
testing =
    pylint==2.2.2
    pycodestyle==2.4.0
    pydocstyle==3.0.0

[wheel]
universal = 1

[entry_points]
console_scripts =
    opsy = opsyclient.shell:main
